fixed bug in css causing overlapping elements on profile page

--- a/app/assets/stylesheets/_show_profile.scss
+++ b/app/assets/stylesheets/_show_profile.scss
@@ -12,7 +12,6 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        height: 100px;
     }
 
     .flex-centered {
